--- a/views/factura_view.xml
+++ b/views/factura_view.xml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <data>
+        <record model="ir.ui.view" id="quintofly.factura_tree">
+            <field name="name">Facturas</field>
+            <field name="model">quintofly.factura</field>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="identificador"/>
+                    <field name="concepto"/>
+                    <field name="cliente_id"/>
+                    <field name="importe_total"/>
+                    <field name="fecha_factura"/>
+                    <field name="estado"/>
+                </tree>
+            </field>
+        </record>
         <record model="ir.actions.act_window" id="act_factura">
-            <field name="name">Factura</field>
+            <field name="name">Facturas</field>
             <field name="res_model">quintofly.factura</field>
-            <field name="view_mode">form,tree</field>
+            <field name="view_mode">tree,form</field>
         </record>
     </data>
 </odoo>
