--- a/views/vuelo_view.xml
+++ b/views/vuelo_view.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <data>
+        <record model="ir.ui.view" id="quintofly.vuelo_tree">
+            <field name="name">Vuelos</field>
+            <field name="model">quintofly.vuelo</field>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="piloto_ids"/>
+                    <field name="origen"/>
+                    <field name="destino"/>
+                    <field name="fecha_vuelo"/>
+                    <field name="aeronave_id"/>
+                </tree>
+            </field>
+        </record>
         <record model="ir.actions.act_window" id="act_vuelo">
-            <field name="name">Vuelo</field>
+            <field name="name">Vuelos</field>
             <field name="res_model">quintofly.vuelo</field>
-            <field name="view_mode">form,tree</field>
+            <field name="view_mode">tree,form</field>
         </record>
     </data>
 </odoo>
