--- a/views/factura_template.xml
+++ b/views/factura_template.xml
@@ -4,6 +4,7 @@
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="factura">
                 <div class="page">
+                <!--vista que tendría el pdf-->
                     <h2 style="text-align: center;">Factura</h2>
                     <p><strong>Identificador:</strong> <t t-esc="factura.identificador"/></p>
                     <p><strong>Fecha de Factura:</strong> <t t-esc="factura.fecha_factura"/></p>
