--- a/views/piloto_view.xml
+++ b/views/piloto_view.xml
@@ -8,6 +8,7 @@
                 <tree>
                     <field name="num_licencia"/>
                     <field name="nombre"/>
+                    <field name="apellido"/>
                     <field name="anyos_experiencia"/>
                 </tree>
             </field>
